# linear_regression

./: .gitignore  Cargo.toml
src/: predict.rs  train.rs
