[package]
name = "linear_regression"
version = "0.0.1"
authors = ["adjivas <adjivas@users.noreply.github.com>"]
description = ""
documentation = "https://adjivas.github.io/linear_regression"
repository = "https://github.com/adjivas/linear_regression.git"
readme = "README.md"
keywords = ["visualize", "linear", "regression"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "visualizedata"
path = "src/bin/visualizedata.rs"
doc = false

[[bin]]
name = "linearfunction"
path = "src/bin/linearfunction.rs"
doc = false

[features]
unstable = [] # for travis-cargo
